# Autograd_cpp

./: CMakeLists.txt
Autograd++/: CMakeLists.txt
Autograd++/include/: DualMath.h  DualNumber.h
Autograd++/src/: DualMath.cpp  DualNumber.cpp  test.cpp
